	  / function end (to be set for fall-through end of its definition)
	* tree.c (cb_build_program): store start position of program definition
	* parser.y, typeck.c (cb_emit_call), tree.h: pass position of CALL in the
	  function call instead of a global variable
	* parser.y: store position of entry points with (backup_current_pos)

2018-03-31  Edward Hart <edward.dan.hart@gmail.com>

	* config.def, scanner.l: added zero-length-literals config option.
	* scanner.l: make zero-length Boolean/hex literals default to zero.

2018-03-30  Edward Hart <edward.dan.hart@gmail.com>

	* typeck.c (validate_move): fixed segfault with zero-length hex literal.

2018-03-27  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* typeck.c (build_cond_88): for VALUE THRU pass generation of this
	  clause by temporarily changing current_statement->name, changed
	  generation of the two conditions to the more natural variant
	  "var >= a && var <= b" instead of "a <= var && var <= b"
	* tree.c (compare_field_literal): added warning for numerical values
	  when compared against their maximum value
	* codegen.c (codegen): generate some comments only when relevant

2018-03-26  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* field.c (validate_any_length_item): fixed missing error position
	* tree.c (word_hash): renamed from hash
	* tree.c: check for alphabetic after checking for more common
	  USAGE/categories

2018-03-25  Ron Norman <rjn@inglenet.com>

	* tree.c (warn_cannot_get_utc): removed as we always have it available

2018-03-24  Edward Hart <edward.dan.hart@gmail.com>

	* tree.c, tree.h: emit error if RECORD VARYING has equal implied limits.
	* reserved.c: replaced most instances of cb_strcasecmp with strcmp for
	  efficiency.

2018-03-22  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* tree.c (cb_fits_int, cb_fits_long_long, cb_get_int, cb_get_long_long,
	  cb_get_u_long_long): adjust literal size with negative scale
